Fix poster generator html

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                                     <div class="text-xs text-gray-300">L'AVOCAT / JUGE IMPROMPTUS</div>
                                 </div>
                                  <div class="text-center">
-                                    <div class="character-icon chatgpt mx-auto mb-2" style="width: 70px; height: 70px;"> testemunha  testemunha</div>
+                                    <div class="character-icon chatgpt mx-auto mb-2" style="width: 70px; height: 70px;"> 🍋</div>
                                     <div class="text-sm text-green-400 font-bold">CHATGPT</div>
                                     <div class="text-xs text-gray-300">LE TÉMOIN</div>
                                 </div>
@@ -1423,7 +1423,7 @@
             ${canvas.innerHTML}
         </div>
     </div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="/index.tsx"><\/script>
 </body>
 </html>`;
             
